# This file is part of ras, an assembler.
# Copyright (C) 2019 Jeffrey Sharp
#
# ras is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published
# by the Free Software Foundation, either version 3 of the License,
# or (at your option) any later version.
#
# ras is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See
# the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with ras.  If not, see <http://www.gnu.org/licenses/>.

[package]
name    = "ras"
version = "0.0.1"
authors = ["Jeff Sharp <jeff.sharp@git>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies.rug]
version = "1.11"
default-features = false
features = ["integer", "float"]

